--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 y-u-no-validate.xpi: chrome/y-u-no-validate.jar chrome.manifest install.rdf
-	rm -f y-u-no-validate.xpi && zip y-u-no-validate.xpi chrome/y-u-no-validate.jar chrome.manifest install.rdf
+	rm -f y-u-no-validate.xpi && zip y-u-no-validate.xpi chrome/y-u-no-validate.jar chrome.manifest install.rdf icon.png
 
 chrome/y-u-no-validate.jar: chrome/content/*
 	cd chrome && rm -f y-u-no-validate.jar && zip -r y-u-no-validate.jar content
